// 使用proto3语法，默认proto2
syntax = "proto3";

// 是否需要生成的类拆分为多个
option java_multiple_files = true;
// 生成的类所属的层级
option java_package = "ucenter.grpc.userInfo";
option java_outer_classname = "UserInfoProto";
option objc_class_prefix = "UCENTER";

// 定义包名，避免命名冲突
package ucenter;

// 定义服务
service UserInfo {
  rpc getUserDetail (UserDetailRequest) returns (UserSchema) {}
  rpc getUserList (UserListRequest) returns (UserListResponse) {}
  rpc hasPriv (HasPrivRequest) returns (HasPrivResponse) {}
}

// 结构化数据：使用message定义。
// 字段类型 字段名 = 字段编号;
message UserDetailRequest {
  string userCode = 1;
}

message UserListRequest {
  repeated string userCodes = 1;
}

message UserListResponse {
  repeated UserSchema users = 1;
}

message HasPrivRequest {
  string userCode = 1;
  repeated string needPrivs = 2;
}

message HasPrivResponse {
  bool hasPriv = 1;
}

message Tag {
  string key = 1;
  string value = 2;
}

message Department {
  string userCode = 1;
  string departmentCode = 2;
  string jobCode = 3;
  string jobStatus = 4;
}

message UserSchema {
  string userCode = 1;
  string loginName = 2;
  string mobile = 3;
  string email = 4;
  repeated string mobileList = 5;
  repeated string phoneList = 6;
  repeated string emailList = 7;
  string realName = 8;
  string nickName = 9;
  string avatarUrl = 10;
  string office = 11;
  string nation = 12;
  string politics = 13;
  string birthday = 14;
  uint32 orderNum = 15;
  uint32 degree = 16;
  uint32 gender = 17;
  int32 status = 18;
  uint32 authType = 19;
  repeated string schemaCodes = 20;
  repeated string orgCodes = 21;
  repeated Tag tags = 22;
  repeated string modulePrivCodes = 23;
  repeated string groupCodes = 24;
  repeated Department departments = 25;
  string mainJobCode = 26;
}